fix(style): prevent text breaks into two lines

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -16,4 +16,7 @@
     margin: 0.5rem 0;
     padding: 0;
     line-height: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
